--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
                     選擇體驗課程
                 </div>
                 <div class="course-grid">
-                    <div class="course-card" data-course="ai" data-course-name="AI體態檢測" data-course-type="AI 3D體態分析師">
+                    <div class="course-card" data-course="ai" data-course-name="AI體態檢測" data-course-type="AI 3D體態分析">
                         <span class="course-icon">🤖</span>
                         <div class="course-name">AI體態檢測</div>
                         <div class="course-desc">3D掃描分析體態</div>
